api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
  namespace: stpk-short
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      labels:
        components: api
    spec:
      containers:
        - name: short-api
          image: antonlarichev/short-api:v1.0
          volumeMounts:
            - name: test
              mountPath: "/etc/test"
              readOnly: true
          livenessProbe:
            exec: 
              command:
                - curl
                - --fail
                - http://localhost:3000/api
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 1
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes: 
        - name: test
          configMap:
            name: demo-config
