postgr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-postgr-deployment
  namespace: stpk-short
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template:
    metadata:
      labels:
        components: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name:  postgres-data
              mountPath:  /var/lib/postgresql/data
              subpath: postgres
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
    volumes:
      - name:  postgres-data
        persistentVolumeClaim: 
          claimName: postgres-pvc
